# strategy-research

./: .gitattributes  .gitignore  Analyse_Ekubo_ETH_USDC_LP_performance.ipynb  CL.ipynb  Copy_Ekubo wstETH-ETH liquidity pool.ipynb  Dashboard for Sensei strategies  ETH_USDC_LP.ipynb  Ekubo wETH-ETH liquidity pool.ipynb  Ekubo wstETH-ETH liquidity pool.ipynb  Ekubo_ETH_USDC.ipynb  Ekubo_wstETH_ETH.ipynb  Ekubo_wstETH_ETH_strategy.ipynb  LST_withdrawal_analysis.ipynb  Liquidation_nostra.ipynb  Makefile  Sensei_TVLvsAPY.ipynb  Strategies_testing.ipynb  VaR_ETH_STRK.ipynb  nostra_contract_abi.json  pyproject.toml  secrets.json  wstETH_ETH.ipynb
Nostra/: Liquidation_nostra.ipynb
USDC_analysis/: USDC_data.ipynb  abi.json
USDCanalysis/: .gitignore
VAR/: ETH_STRK.ipynb
docs/: search.js  src.html
docs/src/: data.html  strategies.html
docs/src/data/: ekubo_data.html  token_adresses.html
docs/src/strategies/: ekubo_base.html
src/: __init__.py
src/BI/: Analyse_LP_performance_ekubo.ipynb
src/data/: GCS-Dataset-Upload-Manager.md  datasets.py  datasets2.py  ekubo_data.py  token_adresses.py
src/strategies/: Sensei_strategies_testing.ipynb  ekubo_base.py
src/utils/: Impermanent_loss_liquidity_pools.ipynb  ekubo_math.py  sensei_math.py
tests/: test_datasets.py  test_ekubomath.py
